--- a/src/style/searchBar.css
+++ b/src/style/searchBar.css
@@ -4,6 +4,12 @@
     margin: auto;
 }
 
+.searchBarContainer h1 {
+    font-family: 'Rock Salt', Cursive;
+    font-size: 3rem;
+    text-align: center;
+}
+
 .input {
     width: 50%;
     margin: auto;
@@ -16,6 +22,10 @@
     padding-left: 50px;
     border-right: 2px solid gray;
     border-bottom: 2px solid gray;
+}
+
+.input:focus {
+    outline: none;
 }
 
 .movieContainer {
